syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.protobuf.model";

message EventMessage {
    int64 timestamp = 1;
    int32 userId = 2;
    string event = 3;
}

message StreamMessage {
    oneof event {
        EventMessage message = 1;
    }
}